[workspace]
members = [
	"bin",
	"runtime/selendra",

	"bin/cli",
	"runtime/common",
	"runtime/common/slot_range_helper",
	"primitives",
	"primitives/core-primitives",
	"node/rpc",
	"node/client",
	"node/collation-generation",
	"node/core/approval-voting",
	"node/core/av-store",
	"node/core/backing",
	"node/core/bitfield-signing",
	"node/core/candidate-validation",
	"node/core/chain-api",
	"node/core/chain-selection",
	"node/core/dispute-coordinator",
	"node/core/dispute-participation",
	"node/core/parachains-inherent",
	"node/core/provisioner",
	"node/core/pvf",
	"node/core/runtime-api",
	"node/network/approval-distribution",
	"node/network/bridge",
	"node/network/protocol",
	"node/network/statement-distribution",
	"node/network/bitfield-distribution",
	"node/network/availability-distribution",
	"node/network/availability-recovery",
	"node/network/collator-protocol",
	"node/network/gossip-support",
	"node/network/dispute-distribution",
	"node/overseer",
	"node/overseer/overseer-gen",
	"node/overseer/overseer-gen/proc-macro",
	"node/primitives",
	"node/service",
	"node/subsystem",
	"node/subsystem-types",
	"node/subsystem-test-helpers",
	"node/subsystem-util",
	"node/jaeger",
	"node/metrics",
	"node/metered-channel",
		
	"modules/erasure-coding",
	"modules/statement-table",
	"modules/xcm",
	"modules/xcm/xcm-builder",
	"modules/xcm/xcm-executor",
	"modules/xcm/pallet-xcm",
	"modules/xcm/pallet-xcm-benchmarks",
	"modules/xcm/procedural",
	
	"vendors/frontier/frame/dynamic-fee",
	"vendors/frontier/frame/ethereum",
	"vendors/frontier/frame/evm",
	"vendors/frontier/frame/evm/precompile/sha3fips",
	"vendors/frontier/frame/evm/precompile/simple",
	"vendors/frontier/frame/evm/precompile/modexp",
	"vendors/frontier/frame/evm/precompile/ed25519",
	"vendors/frontier/frame/evm/precompile/bn128",
	"vendors/frontier/frame/evm/precompile/blake2",
	"vendors/frontier/frame/evm/precompile/dispatch",
	"vendors/frontier/frame/evm/precompile/curve25519",
	"vendors/frontier/client/consensus",
	"vendors/frontier/client/rpc-core",
	"vendors/frontier/client/rpc",
	"vendors/frontier/client/db",
	"vendors/frontier/client/mapping-sync",
	"vendors/frontier/primitives/consensus",
	"vendors/frontier/primitives/evm",
	"vendors/frontier/primitives/rpc",
	"vendors/frontier/primitives/self-contained",

	"vendors/cumulus/client/cli",
	"vendors/cumulus/client/consensus/aura",
	"vendors/cumulus/client/consensus/common",
	"vendors/cumulus/client/consensus/relay-chain",
	"vendors/cumulus/client/network",
	"vendors/cumulus/client/pov-recovery",
	"vendors/cumulus/client/service",
	"vendors/cumulus/pallets/asset-tx-payment",
	"vendors/cumulus/pallets/aura-ext",
	"vendors/cumulus/pallets/collator-selection",
	"vendors/cumulus/pallets/dmp-queue",
	"vendors/cumulus/pallets/parachain-system",
	"vendors/cumulus/pallets/parachain-system/proc-macro",
	"vendors/cumulus/pallets/session-benchmarking",
	"vendors/cumulus/pallets/xcm",
	"vendors/cumulus/pallets/xcmp-queue",
	"vendors/cumulus/primitives/core",
	"vendors/cumulus/primitives/parachain-inherent",
	"vendors/cumulus/primitives/timestamp",
]

[patch.crates-io]
evm = { git = "https://github.com/purestake/evm", branch = "moonbeam-polkadot-v0.9.12"}
evm-runtime = { git = "https://github.com/purestake/evm", branch = "moonbeam-polkadot-v0.9.12" }
evm-gasometer = { git = "https://github.com/purestake/evm", branch = "moonbeam-polkadot-v0.9.12" }
ethereum = { git = "https://github.com/purestake/ethereum", branch = "joshy-scale-info" }

# make sure dev builds with backtrace do
# not slow us down
[profile.dev.package.backtrace]
opt-level = 3

[profile.release]
# Selendra runtime requires unwinding.
panic = "unwind"
