[workspace]
members = [
	"selendra-chains/bin",
	"selendra-chains/runtime/selendra",
	"selendra-chains/runtime/cardamom",
	"selendra-parachains/node",
	"selendra-parachains/runtime/indracore",
	"selendra-parachains/runtime/indranet",

	# "selendra-chains/bin/cli",
	# "selendra-chains/node/rpc",
	# "selendra-chains/node/service",
	# "selendra-chains/node/test/client",
	# "selendra-chains/node/test/performance-test",
	# "selendra-chains/node/test/service",
	# "selendra-chains/node/client",
	# "selendra-chains/runtime/common",
	# "selendra-chains/runtime/common/slot_range_helper",
	# "selendra-chains/runtime/selendra/constants",
	# "selendra-chains/runtime/cardamom/constants",
	# "selendra-chains/runtime/test-runtime",
	# "selendra-chains/runtime/test-runtime/constants",
	# "primitives",
	# "primitives/core-primitives",
	# "primitives/test-helpers",
	# "system-node/collation-generation",
	# "system-node/core/approval-voting",
	# "system-node/core/av-store",
	# "system-node/core/backing",
	# "system-node/core/bitfield-signing",
	# "system-node/core/candidate-validation",
	# "system-node/core/chain-api",
	# "system-node/core/chain-selection",
	# "system-node/core/dispute-coordinator",
	# "system-node/core/parachains-inherent",
	# "system-node/core/provisioner",
	# "system-node/core/pvf",
	# "system-node/core/pvf-checker",
	# "system-node/core/runtime-api",
	# "system-node/network/approval-distribution",
	# "system-node/network/bridge",
	# "system-node/network/protocol",
	# "system-node/network/statement-distribution",
	# "system-node/network/bitfield-distribution",
	# "system-node/network/availability-distribution",
	# "system-node/network/availability-recovery",
	# "system-node/network/collator-protocol",
	# "system-node/network/gossip-support",
	# "system-node/network/dispute-distribution",
	# "system-node/overseer",
	# "system-node/overseer/overseer-gen",
	# "system-node/overseer/overseer-gen/proc-macro",
	# "system-node/primitives",
	# "system-node/subsystem",
	# "system-node/subsystem-types",
	# "system-node/subsystem-test-helpers",
	# "system-node/subsystem-util",
	# "system-node/jaeger",
	# "system-node/metrics",
	# "system-node/metered-channel",
	# "system-node/zombienet-backchannel",
	# "modules/erasure-coding",
	# "modules/metrics",
	# "modules/parachain/runtime",
	# "modules/parachain",
	# "modules/parachain/test-parachains",
	# "modules/parachain/test-parachains/adder",
	# "modules/parachain/test-parachains/adder/collator",
	# "modules/parachain/test-parachains/halt",
	# "modules/statement-table",
	# "modules/xcm",
	# "modules/xcm/xcm-builder",
	# "modules/xcm/xcm-executor",
	# "modules/xcm/xcm-executor/integration-tests",
	# "modules/xcm/xcm-simulator",
	# "modules/xcm/xcm-simulator/example",
	# "modules/xcm/xcm-simulator/fuzzer",
	# "modules/xcm/pallet-xcm",
	# "modules/xcm/pallet-xcm-benchmarks",
	# "modules/xcm/procedural",
	# "modules/cumulus/client/cli",
	# "modules/cumulus/client/consensus/aura",
	# "modules/cumulus/client/consensus/common",
	# "modules/cumulus/client/consensus/relay-chain",
	# "modules/cumulus/client/network",
	# "modules/cumulus/client/pov-recovery",
	# "modules/cumulus/client/service",
	# "modules/cumulus/client/relay-chain-interface",
	# "modules/cumulus/client/relay-chain-local",
	# "modules/cumulus/pallets/aura-ext",
	# "modules/cumulus/pallets/collator-selection",
	# "modules/cumulus/pallets/dmp-queue",
	# "modules/cumulus/pallets/parachain-system",
	# "modules/cumulus/pallets/parachain-system/proc-macro",
	# "modules/cumulus/pallets/session-benchmarking",
	# "modules/cumulus/pallets/xcm",
	# "modules/cumulus/pallets/xcmp-queue",
	# "modules/cumulus/primitives/core",
	# "modules/cumulus/primitives/parachain-inherent",
	# "modules/cumulus/primitives/timestamp",
	# "modules/cumulus/primitives/utility",
	
	# "selendra-parachains/runtime/common",
	# "modules/cumulus/pallets/parachain-info",
	# "modules/cumulus/pallets/ping",
	# "modules/cumulus/test/client",
	# "modules/cumulus/test/relay-sproof-builder",
	# "modules/cumulus/test/relay-validation-worker-provider",
	# "modules/cumulus/test/runtime",
	# "modules/cumulus/test/service",
]

# [badges]
# maintenance = { status = "actively-developed" }

[profile.release]
# Selendra runtime requires unwinding.
panic = "unwind"
opt-level = 3

# make sure dev builds with backtrace do
# not slow us down
[profile.dev.package.backtrace]
inherits = "release"

[profile.production]
inherits = "release"
lto = true
codegen-units = 1

[profile.testnet]
inherits = "release"
debug = 1 # debug symbols are useful for profilers
debug-assertions = true
overflow-checks = true
