[package]
name = "indracore-cli"
version = "0.2.0"
authors = ["Selendra <info@selendra.org>"]
description = "Indracore Relay-chain Client Node"
edition = "2018"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4.13"
thiserror = "1.0.23"

structopt = { version = "0.3.21", optional = true }
wasm-bindgen = { version = "0.2.70", optional = true }
wasm-bindgen-futures = { version = "0.4.19", optional = true }
futures = "0.3.12"

browser-utils = { package = "substrate-browser-utils", git = "https://github.com/selendra/substrate", branch = "v2.0.3", optional = true }
frame-benchmarking-cli = { git = "https://github.com/selendra/substrate", branch = "v2.0.3", optional = true }
sp-core = { git = "https://github.com/selendra/substrate", branch = "v2.0.3" }
sp-trie = { git = "https://github.com/selendra/substrate", branch = "v2.0.3", default-features = false }
sc-cli = { git = "https://github.com/selendra/substrate", branch = "v2.0.3", optional = true }
sc-service = { git = "https://github.com/selendra/substrate", branch = "v2.0.3", optional = true }

try-runtime-cli = { git = "https://github.com/selendra/substrate", branch = "v2.0.3", optional = true }

service = { package = "indracore-service", path = "../node/service", default-features = false, optional = true }
indracore-parachain = { path = "../parachain", optional = true }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/selendra/substrate", branch = "v2.0.3" }

[features]
default = [ "wasmtime", "db", "cli", "full-node", "trie-memory-tracker", "indracore-parachain" ]
wasmtime = [ "sc-cli/wasmtime", "indracore-parachain/wasmtime" ]
db = [ "service/db" ]
cli = [
	"structopt",
	"sc-cli",
	"sc-service",
	"frame-benchmarking-cli",
	"try-runtime-cli",
]
browser = [
	"wasm-bindgen",
	"wasm-bindgen-futures",
	"browser-utils",
	"service",
]
runtime-benchmarks = [ "service/runtime-benchmarks" ]
trie-memory-tracker = [ "sp-trie/memory-tracker" ]
full-node = [ "service/full-node" ]
real-overseer = [ "service/real-overseer" ]
try-runtime = [ "service/try-runtime" ]
