[package]
name = "indracore-core-primitives"
version = "0.2.0"
authors = ["Selendra <info@selendra.org>"]
edition = "2018"

[dependencies]
parity-scale-codec = { version = "2.0.0", default-features = false, features = [ "derive" ] }
parity-util-mem = { version = "0.9.0", default-features = false, optional = true }

sp-core = { git = "https://github.com/selendra/substrate", branch = "master", default-features = false }
sp-std = { git = "https://github.com/selendra/substrate", branch = "master", default-features = false }
sp-runtime = { git = "https://github.com/selendra/substrate", branch = "master", default-features = false }

[features]
default = [ "std" ]
std = [
	"parity-scale-codec/std",
	"parity-util-mem",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
]
