[package]
name = "indracore-core-primitives"
version = "0.2.0"
authors = ["Selendra <info@selendra.org>"]
edition = "2018"

[dependencies]
sp-core = { git = "https://github.com/selendra/substrate", branch = "v2.0.3", default-features = false }
sp-std = { git = "https://github.com/selendra/substrate", branch = "v2.0.3", default-features = false }
sp-runtime = { git = "https://github.com/selendra/substrate", branch = "v2.0.3", default-features = false }
parity-scale-codec = { version = "2.0.0", default-features = false, features = [ "derive" ] }
parity-util-mem = { version = "0.9.0", default-features = false, optional = true }

[features]
default = [ "std" ]
std = [
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
	"parity-scale-codec/std",
	"parity-util-mem",
]
