[package]
name = "indracore-erasure-coding"
version = "0.3.0"
authors = ["Selendra <info@selendra.org>"]
edition = "2018"

[dependencies]
primitives = { package = "indracore-primitives", path = "../primitives" }
reed_solomon = { package = "reed-solomon-erasure", version = "4.0.2" }
parity-scale-codec = { version = "2.0.0", default-features = false, features = ["derive"] }
sp-core = { git = "https://github.com/selendra/substrate", branch = "master" }
trie = { package = "sp-trie", git = "https://github.com/selendra/substrate", branch = "master" }
thiserror = "1.0.23"
