[package]
name = "indracore-erasure-coding"
version = "0.4.0-dev"
authors = ["Selendra <info@selendra.org>"]
edition = "2018"

[dependencies]
primitives = { package = "indracore-primitives", path = "../primitives" }
novelpoly = { package = "reed-solomon-novelpoly", version = "=0.0.1" }
parity-scale-codec = { version = "2.0.0", default-features = false, features = ["std", "derive"] }
sp-core = { git = "https://github.com/selendra/substrate", branch = "master" }
trie = { package = "sp-trie", git = "https://github.com/selendra/substrate", branch = "master" }
thiserror = "1.0.23"
