[package]
name = "indracore"
version = "0.2.0"
authors = ["Selendra <info@selendra.org>"]
description = "Implementation of node in Rust based on the Substrate framework."
license = "GPL-3.0-only"
edition = "2018"

[[bin]]
name = "indracore"
path = "src/main.rs"

[dependencies]
cli = { package = "indracore-cli", path = "../cli" }
color-eyre = "0.5.10"
thiserror = "1.0.23"
futures = "0.3.12"
service = { package = "indracore-service", path = "../node/service" }
parity-util-mem = { version = "*", default-features = false, features = ["jemalloc-global"] }

[dev-dependencies]
assert_cmd = "1.0.2"
nix = "0.19.1"
tempfile = "3.2.0"

[badges]
maintenance = { status = "actively-developed" }

[features]
runtime-benchmarks=["cli/runtime-benchmarks"]
real-overseer=["cli/real-overseer"]

# Configuration for building a .deb package - for use with `cargo-deb`
[package.metadata.deb]
name = "indracore"
extended-description = "Implementation of node in Rust based on the Substrate framework."
section = "misc"
maintainer = "martin@parity.io"
license-file = ["LICENSE", "0"]

assets = [
	["target/release/indracore", "/usr/bin/", "755"],
	["scripts/packaging/indracore.service", "/lib/systemd/system/", "644"]
]
conf-files = [
	"/etc/default/indracore"
]

# Configuration for building an .rpm package - for use with `cargo-rpm`
[package.metadata.rpm]
package = "indracore"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
indracore = { path = "/usr/bin/indracore" }

[package.metadata.rpm.files]
"../scripts/packaging/indracore.service" = { path = "/usr/lib/systemd/system/indracore.service", mode = "644" }
