[package]
name = "indracore-parachain"
version = "0.1.0"
authors = ["Selendra <info@selendra.org>"]
edition = "2018"

[dependencies]
parity-scale-codec = { version = "1.3.5", default-features = false, features = [ "derive" ] }
thiserror = { version = "1.0.22", optional = true }
serde = { version = "1.0.117", default-features = false, features = [ "derive" ], optional = true }
parking_lot = { version = "0.11.0", optional = true }
log = { version = "0.4.11", optional = true }
futures = { version = "0.3.8", optional = true }
derive_more = "0.99.11"

sp-core = { git = "https://github.com/selendra/substrate", branch = "v2.0.1", default-features = false }
sp-std = { git = "https://github.com/selendra/substrate", branch = "v2.0.1", default-features = false }
sp-runtime = { git = "https://github.com/selendra/substrate", branch = "v2.0.1", default-features = false }
sp-wasm-interface = { git = "https://github.com/selendra/substrate", branch = "v2.0.1", default-features = false }
sp-externalities = { git = "https://github.com/selendra/substrate", branch = "v2.0.1", optional = true }
sp-io = { git = "https://github.com/selendra/substrate", branch = "v2.0.1", optional = true }
sc-executor = { git = "https://github.com/selendra/substrate", branch = "v2.0.1", optional = true }
indracore-core-primitives = { path = "../core-primitives", default-features = false }

[target.'cfg(not(any(target_os = "android", target_os = "unknown")))'.dependencies]
shared_memory = { version = "0.10.0", optional = true }

[features]
default = ["std"]
wasm-api = []
std = [
	"parity-scale-codec/std",
    "shared_memory",
    "parking_lot",
    "futures",
	"thiserror",
    "serde/std",
    "log",
    "sp-io",
	"sp-std/std",
	"sp-runtime/std",
	"sp-core/std",
	"sp-externalities",
	"sc-executor",
	"indracore-core-primitives/std",
	
]
