[package]
name = "indracore-parachain"
version = "0.2.0"
authors = ["Selendra <info@selendra.org>"]
description = "Types and utilities for creating and working with parachains"
edition = "2018"

[dependencies]
derive_more = "0.99.11"
parking_lot = { version = "0.11.1", optional = true }
log = { version = "0.4.11", optional = true }
futures = { version = "0.3.8", optional = true }
thiserror = { version = "1.0.22", optional = true }
serde = { version = "1.0.117", default-features = false, features = [ "derive" ], optional = true }
parity-scale-codec = { version = "1.3.6", default-features = false, features = [ "derive" ] }
parity-util-mem = { version = "0.8.0", optional = true }

sp-std = { git = "https://github.com/selendra/substrate", branch = "master", default-features = false }
sp-runtime = { git = "https://github.com/selendra/substrate", branch = "master", default-features = false }
sp-core = { git = "https://github.com/selendra/substrate", branch = "master", default-features = false }
sp-wasm-interface = { git = "https://github.com/selendra/substrate", branch = "master", default-features = false }
sp-externalities = { git = "https://github.com/selendra/substrate", branch = "master", optional = true }
sc-executor = { git = "https://github.com/selendra/substrate", branch = "master", optional = true }
sp-io = { git = "https://github.com/selendra/substrate", branch = "master", optional = true }

indracore-core-primitives = { path = "../core-primitives", default-features = false }

[target.'cfg(not(any(target_os = "android", target_os = "unknown")))'.dependencies]
shared_memory = { version = "0.10.0", optional = true }

[features]
default = ["std"]
wasmtime = [ "sc-executor/wasmtime" ]
wasm-api = []
std = [
	"parity-scale-codec/std",
	"thiserror",
	"serde/std",
	"sp-std/std",
	"sp-runtime/std",
	"shared_memory",
	"sp-core/std",
	"parking_lot",
	"log",
	"parity-util-mem",
	"sp-externalities",
	"sc-executor",
	"sp-io",
	"indracore-core-primitives/std",
	"futures",
]
